# beekind

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: CONTRIBUTING.md  README.md  pull_request_template.md
.github/workflows/: black_flake8.yaml
frontend/android/app/src/main/kotlin/uk/co/beekind/frontend/: MainActivity.kt
frontend/linux/: CMakeLists.txt
frontend/web/: index.html  manifest.json
infra/: Dockerfile
src/backend/: __init__.py  __main__.py  api.py  config.py
src/backend/auth/: __init__.py  auth_helper.py  ms_auth_adapter.py
src/backend/helpers/: __init__.py  config.py
src/backend/models/: __init__.py  admin.py  apiaries.py  contacts.py  organisations.py  user_to_org_link.py  users.py
src/backend/routers/: __init__.py  contacts.py  resource.py
src/backend/routers/resources/: __init__.py  apiary.py  contacts.py  organisations.py  users.py
src/frontend/: pubspec.yaml
src/frontend/android/app/: build.gradle.kts
