[project]
name = "pacific_crest_trail"
version = "0.0.1"
dependencies = [
    "fastapi>=0.111.0",
    "fastapi-utilities>=0.2.0",
    "uvicorn>=0.29.0",
    "sqlmodel>=0.0.24",
    "pyjwt>=2.8.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "uvloop",
    "httptools"
]
requires-python = ">=3.12"
readme = ".github/README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.1.0",
    "pip-tools>=7.3.0",
    "pre-commit>=3.4.0",
]

[tool.black]
line-length = 127
target-version = ["py312"]
