[project]
name = "beekind"
version = "0.0.1"
dependencies = [
    "cryptography>=46.0.3",
    "fastapi>=0.122.0",
    "fastapi-utilities>=0.3.1",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "pyjwt>=2.10.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-keycloak>=5.8.1",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.29.0",
    "uvloop>=0.22.1",
]
requires-python = ">=3.12"
readme = ".github/README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "black>=23.12.1",
    "flake8>=7.3.0",
    "pip-tools>=7.5.2",
    "pre-commit>=4.5.0",
]

[tool.black]
line-length = 127
target-version = ["py312"]
